# ktir-mlir-frontend

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  llvm-build.yml
cmake/: llvm-hash.txt
docs/: ci.md
include/: CMakeLists.txt
include/Ktdp/: CMakeLists.txt  KtdpAttrs.hpp  KtdpAttrs.td  KtdpDialect.hpp  KtdpDialect.td  KtdpOps.hpp  KtdpOps.td  KtdpTypes.hpp  KtdpTypes.td
include/Ktdp-c/: Dialects.h
lib/: CMakeLists.txt
lib/CAPI/: CMakeLists.txt  Dialects.cpp
lib/Ktdp/: CMakeLists.txt  KtdpAttrs.cpp  KtdpDialect.cpp  KtdpOps.cpp  KtdpTypes.cpp
python/: CMakeLists.txt  KtdpExtensionNanobind.cpp
python/mlir_ktdp/: __init__.py
python/mlir_ktdp/dialects/: KtdpOps.td  ktdp_nanobind.py
python/test/: conftest.py  test_basic.py
python/tools_ktdp/: __init__.py  __main__.py  ir_utils.py
scripts/: setup_mlir.py
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Ktdp/: access-tile-type.mlir  add-with-control-flow-runtime-arg.mlir  add-with-control-flow.mlir  add.mlir  attrs-roundtrip.mlir  attrs-verify-negative.mlir  basic-runtime-arg.mlir  basic.mlir  construct-access-tile.mlir  construct-indirect-access-tile.mlir  invalid.mlir  paged-tensor-copy.mlir  roundtrip.mlir  runtime-arg-extract.mlir  runtime-arg-type.mlir  tensor-extract-slice.mlir  types-roundtrip.mlir
tools/: CMakeLists.txt
tools/ktir-opt/: CMakeLists.txt  ktir-opt.cpp
