[build-system]
requires = ["scikit-build-core", "nanobind>=2.12.0", "mlir_wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "ktir-mlir-frontend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "nanobind>=2.12.0",
]

[project.optional-dependencies]
mlir = ["mlir_wheel"]
test = ["pytest", "lit"]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = ["-DKTIR_ENABLE_PYTHON_BINDINGS=ON", "-GNinja"]
install.components = ["KtdpPythonModules"]

[tool.scikit-build.cmake.define]
MLIR_BINDINGS_PYTHON_INSTALL_PREFIX = "mlir_ktdp"

[tool.uv]
find-links = ["https://llvm.github.io/eudsl"]
