[build-system]
requires = ["scikit-build-core", "nanobind>=2.12.0", "mlir_wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "ktir-mlir-frontend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "nanobind>=2.12.0",
]

[project.scripts]
ktdp-walk = "tools_ktdp.__main__:main"

[project.optional-dependencies]
test = ["pytest", "lit"]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = ["-DKTIR_ENABLE_PYTHON_BINDINGS=ON", "-GNinja"]
install.components = ["KtdpPythonModules"]
# mlir_ktdp/ is fully cmake-managed (extensions + MLIR-generated Python).
# ktdp_tools/ is pure-Python, NOT managed by cmake, so scikit-build-core
# handles it here.  In editable installs this gives ktdp_tools a live source
# redirect; mlir_ktdp falls through to the cmake-installed snapshot as usual.
wheel.packages = ["python/mlir_ktdp", "python/tools_ktdp"]

[tool.scikit-build.cmake.define]
MLIR_BINDINGS_PYTHON_INSTALL_PREFIX = "mlir_ktdp"

[dependency-groups]
# Base build tools for all LLVM builds (stable and nightly).
llvm-build = ["cmake", "ninja", "sccache"]
# numpy<2 is additionally required by check-mlir's Python test suite (nightly only).
# numpy 2.x causes a dense-element ABI mismatch with MLIR at this LLVM version.
# Stable builds skip check-mlir, so they use llvm-build directly.
llvm-build-nightly = [{include-group = "llvm-build"}, "numpy<2"]

[tool.uv]
find-links = ["https://llvm.github.io/eudsl"]
